// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActiveFilters should call handleOpen when showMore filter is clicked 1`] = `
<glamorous(div)>
  <glamorous(div)
    isActive={true}
    onClick={[Function]}
  >
    <p />
  </glamorous(div)>
  <glamorous(div)
    isActive={true}
    onClick={[Function]}
  >
    <p />
  </glamorous(div)>
  <glamorous(div)
    isActive={true}
    onClick={[Function]}
  >
    <p />
  </glamorous(div)>
  <glamorous(div)
    onClick={[Function]}
    width="178px"
  >
    <p>
      Visualizza altri filtri
    </p>
  </glamorous(div)>
  <glamorous(div)
    onClick={[Function]}
  >
    <p>
      Reset filtri
    </p>
  </glamorous(div)>
</glamorous(div)>
`;

exports[`ActiveFilters should call toggleAvailability when a availability filter is clicked 1`] = `
<glamorous(div)>
  <glamorous(div)
    isActive={true}
    onClick={[Function]}
  >
    <p>
      Disponibile
    </p>
  </glamorous(div)>
  <glamorous(div)
    onClick={[Function]}
  >
    <p>
      Reset filtri
    </p>
  </glamorous(div)>
</glamorous(div)>
`;

exports[`ActiveFilters should call toggleFilter when a filter is clicked 1`] = `
<glamorous(div)>
  <glamorous(div)
    isActive={true}
    onClick={[Function]}
  >
    <p />
  </glamorous(div)>
  <glamorous(div)
    onClick={[Function]}
  >
    <p>
      Reset filtri
    </p>
  </glamorous(div)>
</glamorous(div)>
`;

exports[`ActiveFilters should render a paragrapgh when no filters are active 1`] = `
<glamorous(div)
  onClick={[Function]}
>
  <p>
    Tocca per avviare una ricerca avanzata dei prodotti
  </p>
</glamorous(div)>
`;

exports[`ActiveFilters should render any filters 1`] = `
<glamorous(div)>
  <glamorous(div)
    isActive={true}
    onClick={[Function]}
  >
    <p />
  </glamorous(div)>
  <glamorous(div)
    isActive={true}
    onClick={[Function]}
  >
    <p>
      Disponibile
    </p>
  </glamorous(div)>
  <glamorous(div)
    onClick={[Function]}
  >
    <p>
      Reset filtri
    </p>
  </glamorous(div)>
</glamorous(div)>
`;
